--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -432,10 +432,14 @@ histogram.
 
 A basic template for creating a plot with `ggplot`:
 
+<!-- # nolint start -->
+
 ```r
 ggplot(data = <DATA>) +
     <GEOM>(mapping = aes(<MAPPINGS>))
 ```
+
+<!-- # nolint end -->
 
 ---
 ## Old Faithful Eruptions
@@ -1163,11 +1167,12 @@ eye_hairsex <-
 p1 <- ggplot(eye_hairsex) +
     geom_col(aes(x = Eye, y = Prop, fill = Eye)) +
     scale_fill_manual(values = cols) +
-    facet_grid(Hair~Sex)
+    facet_grid(Hair ~ Sex)
 p2 <- ggplot(eye_hairsex) +
     geom_col(aes(x = "", y = Prop, fill = Eye)) +
     scale_fill_manual(values = cols) +
-    coord_polar("y")+facet_grid(Hair~Sex) +
+    coord_polar("y") +
+    facet_grid(Hair ~ Sex) +
     theme_void()
 cowplot::plot_grid(p1, p2)
 ```
@@ -1177,6 +1182,8 @@ cowplot::plot_grid(p1, p2)
 ## Hair and Eye Color Data
 
 A more complete `ggplot` template:
+
+<!-- # nolint start -->
 
 ```r
 ggplot(data = <DATA>) +
@@ -1189,6 +1196,7 @@ ggplot(data = <DATA>) +
     <FACETING> +
     <THEME_ADJUSTMENT>
 ```
+<!-- # nolint end -->
 
 
 ---
@@ -1712,7 +1720,7 @@ Using color to show when the wind turbines were  built:
 
 .pull-left[
 ```{r wt-IA-color, eval = FALSE}
-year_brk <-c(0, 2005, 2010, 2015, 2020)
+year_brk <- c(0, 2005, 2010, 2015, 2020)
 year_lab <- c("before 2005",
               "2005-2009",
               "2010-2014",
@@ -1761,9 +1769,13 @@ cancer incidence for a number of different cancers in Iowa.
 
 --
 
+<!-- # nolint start -->
+
 ```{r, include = FALSE}
 cancer_data_file <- here::here("data/Invasive-Cancer-Incidence-Rates-by-County-in-Iowa-Lung-and-Bronchus-2011.csv")
 ```
+
+<!-- # nolint end -->
 
 The data for lung and bronchus cancer in 2011 are available in a [csv
 file](`r cancer_data_file`) in the project.
@@ -1794,11 +1806,15 @@ Looking at the file shows some things that need to be cleaned up:
 
 The header can be handled by using `skip = 2` in the `read_csv` call:
 
+<!-- # nolint start -->
+
 ```{r, message = FALSE}
 fname <- here::here("data/Invasive-Cancer-Incidence-Rates-by-County-in-Iowa-Lung-and-Bronchus-2011.csv")
 d <- read_csv(fname, skip = 2)
 head(d)
 ```
+
+<!-- # nolint end -->
 
 ---
 ## Cancer Map
@@ -1984,7 +2000,7 @@ mdl <- mutate(md,
                             sep = "\n"))
 p <- ggplot(mdl) +
     geom_sf(aes(fill = rate1K,
-                text = label), 
+                text = label),
             color = "grey") +
     scale_fill_viridis(name = "Rate per 1000") +
     theme_map()
@@ -2075,7 +2091,7 @@ lausUS <- read.table(lausURL,
                      stringsAsFactors = FALSE, strip.white = TRUE,
                      fill = TRUE)
 footstart <- grep("------", lausUS$LAUSAreaCode)
-lausUS <- lausUS[1:(footstart - 1),]
+lausUS <- lausUS[1 : (footstart - 1), ]
 ```
 
 ---
@@ -2206,7 +2222,7 @@ county.fips <-
     mutate(maps::county.fips, polyname = sub(":.*", "", polyname)) %>%
     unique()
 counties_sf <- left_join(counties_sf, county.fips, c("ID" = "polyname"))
-states_sf <-  sf::st_as_sf(maps::map("state", plot = FALSE, fill = TRUE))
+states_sf <- sf::st_as_sf(maps::map("state", plot = FALSE, fill = TRUE))
 ```
 
 ---
@@ -2298,13 +2314,22 @@ m_sf <- ggpoly2sf(socviz::county_map, c("long", "lat"), "group", "id")
 m_sf <- mutate(m_sf, fips = as.numeric(id))
 m_sf <- mutate(m_sf, fips = replace(fips, fips == 46113, 46102))
 ggplot(m_sf) + geom_sf()
-au <- group_by(lausUS, fips) %>% summarize(avg_ur = mean(UnempRate, na.rm = TRUE))
-mu <- group_by(lausUS, fips) %>% summarize(max_ur = max(UnempRate, na.rm = TRUE))
+au <- group_by(lausUS, fips) %>%
+    summarize(avg_ur = mean(UnempRate, na.rm = TRUE))
+mu <- group_by(lausUS, fips) %>%
+    summarize(max_ur = max(UnempRate, na.rm = TRUE))
 da <- left_join(m_sf, au, "fips")
 dm <- left_join(m_sf, mu, "fips")
-ggplot(da, aes(fill = avg_ur)) + geom_sf(size = 0.1) + scale_fill_viridis(name = "Rate", na.value = "red")
-ggplot(dm, aes(fill = max_ur)) + geom_sf(size = 0.1) + scale_fill_viridis(name = "Rate", na.value = "red")
-ggplot(left_join(m_sf, filter(lausUS, Period == "Apr-20"), "fips"), aes(fill = UnempRate)) + geom_sf(size = 0.1) + scale_fill_viridis(name = "Rate", na.value = "red")
+ggplot(da, aes(fill = avg_ur)) +
+    geom_sf(size = 0.1) +
+    scale_fill_viridis(name = "Rate", na.value = "red")
+ggplot(dm, aes(fill = max_ur)) +
+    geom_sf(size = 0.1) +
+    scale_fill_viridis(name = "Rate", na.value = "red")
+ggplot(left_join(m_sf, filter(lausUS, Period == "Apr-20"), "fips"),
+       aes(fill = UnempRate)) +
+    geom_sf(size = 0.1) +
+    scale_fill_viridis(name = "Rate", na.value = "red")
 ```
 ---
 ## Gapminder Childhood Mortality Data
