--- a/tutorial/penguins.Rmd
+++ b/tutorial/penguins.Rmd
@@ -1,7 +1,7 @@
 ---
 #############################################################
 #                                                           #
-# It RStudio click on "Run Document" to run this tutorial   #
+# In RStudio click on "Run Document" to run this tutorial   #
 #                                                           #
 #############################################################
 title: "Penguins"
@@ -14,6 +14,7 @@ runtime: shiny_prerendered
 library(learnr)
 library(tidyverse)
 knitr::opts_chunk$set(echo = FALSE, comment = "", warning = FALSE)
+library(palmerpenguins)
 ```
 
 ## Palmer Penguins
